fix: Reset line-height and letter-spacing
When using <h1 class="h3">, the line-height and letter-spacing was set
by the h1 tag, but wasn't correctly reset by the h3 class. So, the style
was a mixed of h1 and h3. This is now fixed.

--- a/src/cozy/_defaults.scss
+++ b/src/cozy/_defaults.scss
@@ -9,12 +9,20 @@ h1 {
 }
 
 h2 {
+  line-height: $headings-line-height;
   letter-spacing: -.4px;
+}
+
+h3,
+h4 {
+  line-height: $headings-line-height;
+  letter-spacing: 0;
 }
 
 h5,
 h6 {
   line-height: $line-height-base;
+  letter-spacing: 0;
 }
 
 img {
