--- a/src/cozy/_variables.scss
+++ b/src/cozy/_variables.scss
@@ -30,4 +30,8 @@ $display-font-sizes: (1: 5rem);
 // generated CSS.
 $grid-breakpoints: (xs: 0, md: 768px);
 
-$box-shadow: 0 .25rem .75rem 0 rgba(0, 0, 0, 0.08);
+// Alerts
+$alert-border-width: 0;
+
+// Utility
+$box-shadow: 0 .25rem .75rem 0 rgba(0, 0, 0, .08);
